@@ -64,9 +64,9 @@ func TestSourceListTypes(t *testing.T) {
 		newSourceCRDObjWithSpec("apiserversources", "sources.knative.dev", "v1alpha1", "ApiServerSource"),
 	)
 	assert.NilError(t, err)
-	assert.Check(t, util.ContainsAll(output[0], "TYPE", "NAME", "DESCRIPTION"))
-	assert.Check(t, util.ContainsAll(output[1], "ApiServerSource", "apiserversources"))
-	assert.Check(t, util.ContainsAll(output[2], "PingSource", "pingsources"))
+	assert.Check(t, util.ContainsAll(output[0], "TYPE", "S", "NAME", "DESCRIPTION"))
+	assert.Check(t, util.ContainsAll(output[1], "ApiServerSource", "X", "apiserversources"))
+	assert.Check(t, util.ContainsAll(output[2], "PingSource", "X", "pingsources"))
 }
 
 func TestSourceListTypesNoHeaders(t *testing.T) {
